--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "axios": "^1.3.3",
     "firebase": "^9.15.0",
     "quagga": "^0.12.1",
     "react": "^18.2.0",
