--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,5 +1,5 @@
 databases:
-  - name: rmyapp_development
+  - name: myapp_development
     databaseName: myapp_development
     user: rails7_sample
     region: singapore
@@ -15,7 +15,7 @@ services:
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: rails7_sample_staging
+          name: myapp_development
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
